--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,52 @@ select {
   font-size: inherit;
 }
 /* CSS Reset */
+
+/* body */
+body {
+  background-color: #0b0625;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Box */
+.box-left, .box-right {
+  padding: 2rem 2rem 0 2rem;
+  border: 2px dashed #fff;
+  display: flex;
+  flex-direction: column;
+  width: 17.5rem;
+  height: 25.2rem;
+}
+
+/* List */
+ul {
+  display: flex;
+  flex-direction: column;
+  /* gap: 2rem; */
+}
+
+li {
+  background-color: #fa3663;
+  height: 3.75rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  font-size: 1.25rem;
+  cursor: grab;
+  opacity: 1;
+  margin-bottom: 2rem;
+
+}
+
+/* Drag */
+.dragging {
+  opacity: 0.7;
+  position: absolute;
+  pointer-events: none;
+  z-index: 1000;
+}
